force-app/main/default/objects/Get_help_Configuration__mdt/Get_help_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Get Help Configuration</label>
    <pluralLabel>Get Help Configurations</pluralLabel>
</CustomObject>