force-app/main/default/objects/Get_help_Configuration__mdt/fields/Case_Assigned_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_User_Name__c</fullName>
    <description>User name of the case assigned user</description>
    <inlineHelpText>User name of the case assigned user</inlineHelpText>
    <label>Case Assigned User Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>