force-app/main/default/objects/Get_help_Configuration__mdt/fields/Email_Send_List__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_List__c</fullName>
    <description>Used for entering the email routes of the person</description>
    <inlineHelpText>Used for entering the email routes of the person, Please add multiple user with comma separated eg r@gmail.com,s@gmail.com</inlineHelpText>
    <label>Email Send List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>