force-app/main/default/objects/Get_help_Configuration__mdt/fields/Test_Email__c.field-meta.xml
<CustomField>
    <fullName>Test_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Email</label>
    <type>Checkbox</type>
</CustomField>